chore: fix layout height and margin spacing of product cards for tablet and laptop

--- a/src/components/section_components/mainpage/style/product.css
+++ b/src/components/section_components/mainpage/style/product.css
@@ -7,7 +7,6 @@
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
-  height: 100%;
 }
 
 .image-wrapper {
